--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -14,14 +14,34 @@ tools:context="com.marceme.marcefirebasechat.profile.MyProfileActivity">
 
         android:weightSum="1">
 
-        <ImageView
-            android:id="@+id/profile_image"
-            android:layout_width="30sp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.40"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            android:src="@drawable/headshot_7"/>
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/profile_image"
+                android:layout_width="wrap_content"
+                android:layout_height="110dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="30dp"
+                android:src="@drawable/headshot_7"/>
+
+            <Button
+                android:id="@+id/bt_edit_photo"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_margin="0dp"
+                android:background="@color/primary"
+                android:padding="0dp"
+                android:text="Edit">
+
+            </Button>
+
+
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/titleProfile"
