--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -33,6 +33,7 @@ tools:context="com.marceme.marcefirebasechat.profile.MyProfileActivity">
                 android:layout_height="30dp"
                 android:layout_margin="0dp"
                 android:background="@color/primary"
+                android:onClick="editUpload"
                 android:padding="0dp"
                 android:text="Edit">
 
