--- a/app/src/main/res/layout/layout_recipient_message.xml
+++ b/app/src/main/res/layout/layout_recipient_message.xml
@@ -3,19 +3,56 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/text_view_recipient_message"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Hi. How are you?"
-        android:padding="8dp"
-        android:textStyle="bold"
-        android:layout_marginRight="60dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="2dp"
-        android:textColor="#727272"
-        android:textSize="14sp"
-        android:background="@drawable/recipient_rounded_corners"/>
+        android:orientation="horizontal">
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_recipient_photo"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            tools:src="@drawable/headshot_7"
+            android:layout_margin="10dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image_view_recipient_message_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/image"
+                android:padding="8dp"
+                android:layout_marginRight="60dp"
+
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="2dp"
+                android:background="@drawable/recipient_rounded_corners"
+                />
+
+            <TextView
+                android:id="@+id/text_view_recipient_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Hi. How are you?"
+                android:padding="8dp"
+                android:textStyle="bold"
+                android:layout_marginRight="60dp"
+
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="2dp"
+                android:textColor="#727272"
+                android:textSize="14sp"
+                android:background="@drawable/recipient_rounded_corners"/>
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
 
 </RelativeLayout>
