--- a/app/src/main/res/layout/layout_sender_message.xml
+++ b/app/src/main/res/layout/layout_sender_message.xml
@@ -1,23 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/text_view_sender_message"
-        android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="I am doing ok"
-        android:padding="8dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="2dp"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:textColor="#FFFFFF"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/sender_rounded_corners"/>
+        android:orientation="horizontal"
+        android:gravity="right">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image_view_sender_message_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/image"
+                android:padding="8dp"
+                android:layout_marginLeft="60dp"
+
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="2dp"
+                android:background="@drawable/sender_rounded_corners"
+                />
+
+            <TextView
+                android:id="@+id/text_view_sender_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="I am doing ok"
+                android:padding="8dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="2dp"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:textColor="#FFFFFF"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/sender_rounded_corners"
+                android:layout_gravity="right"
+                />
+        </LinearLayout>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_sender_photo"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            tools:src="@drawable/headshot_7"
+            android:layout_margin="10dp"/>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
