--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,4 +10,8 @@
           android:title="MyProfile"
           android:orderInCategory="100"
           android:showAsAction="never"/>
+      <item android:id="@+id/action_blogPost"
+      android:title="blogPost"
+      android:orderInCategory="100"
+      android:showAsAction="never"/>
 </menu>
