--- a/app/src/main/res/drawable/sender_rounded_corners.xml
+++ b/app/src/main/res/drawable/sender_rounded_corners.xml
@@ -4,7 +4,7 @@
 
     <!-- view background color -->
     <solid
-        android:color="#86B2FF" >
+        android:color="#90ce90" >
     </solid>
 
     <!-- view border color and width -->
