--- a/app/src/main/res/layout/layout_sender_both.xml
+++ b/app/src/main/res/layout/layout_sender_both.xml
@@ -15,6 +15,18 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/image_view_sender_message_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:padding="8dp"
+                android:layout_marginLeft="60dp"
+
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="2dp"
+                android:background="@drawable/sender_rounded_corners"
+                />
 
             <TextView
                 android:id="@+id/text_view_sender_message"
