--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,16 @@
     <color name="text_color">#f2f9f2</color>
     <color name="text_color_icon">#212121</color>
 
+
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#00BFFF</color>
+
+    <color name="black">#000000</color>
+    <color name="grey_100">#F5F5F5</color>
+    <color name="grey_300">#E0E0E0</color>
+    <color name="colorDark">#202020</color>
+    <color name="theme_color">@android:color/holo_blue_dark</color>
+    <color name="theme_background">@android:color/white</color>
+
 </resources>
