--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,23 @@
         <!-- Customize your theme here. -->
     </style>
 
+
+
+    <style name="TextViewStyle">
+        <item name="android:textSize">20dp</item>
+        <item name="android:padding">2dp</item>
+    </style>
+
+
+    <style name="MessageDateStyle">
+        <item name="android:textSize">13dp</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
+    <style name="RowStyle">
+        <item name="android:padding">7dp</item>
+    </style>
+
 </resources>
